--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 
 * {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
+div.bloco{
+    height: 150px;
+    border: 1px solid black;
+    margin: 10px;
+    border-radius: 20px;
+}
+
